--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,10 +29,19 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install pylint pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install and configure Poetry #We're using poetry for dependency management
+      uses: snok/install-poetry@v1       #We're also caching to avoid fresh install everytime
+      with:
+        version: 1.1.13
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+    - name: Install dependencies
+      #working-directory: ./src #We're matching our project structure
+      run: poetry install
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
     - name: Test with pytest
       run: |
-        pytest
+        poetry run python -m pytest
 
