--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,8 +29,9 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install pylint pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Analysing the code with pylint
+    - name: Setting virtual environment
       run: |
+         python -m venv .venv
          .venv\Scripts\activate
          python -m pip install -e '.[dev]'
     - name: Analysing the code with pylint
